opam-version: "2.0"
authors: ["Brendan Long <self@brendanlong.com>"]
maintainer: "self@brendanlong.com"
homepage: "https://github.com/brendanlong/ocaml-ooxml"
dev-repo: "git+https://github.com/brendanlong/ocaml-ooxml.git"
bug-reports: "https://github.com/brendanlong/ocaml-ooxml/issues"
doc: "https://brendanlong.github.io/ocaml-ooxml/doc"

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "camlzip"
  "ocaml" {>= "5.1.0"}
  "ppx_jane"
  "ptime"
  "spreadsheetml"

  "bisect_ppx" {build & >= "2.8.0"}
  "dune" {build}

  "csv" {test}
  "ounit" {test}
]
name: "easy_xlsx"
version: "1.0"
synopsis: "A library to easily read XLSX files into a simpler format"
