opam-version: "2.0"
authors: ["Brendan Long <self@brendanlong.com>"]
synopsis: "A library for parsing Microsoft's Open Packaging Specification (most commonly used for Microsoft Office's 'Office Open XML')"
maintainer: "self@brendanlong.com"
homepage: "https://github.com/brendanlong/ocaml-ooxml"
dev-repo: "git+https://github.com/brendanlong/ocaml-ooxml.git"
bug-reports: "https://github.com/brendanlong/ocaml-ooxml/issues"
doc: "https://brendanlong.github.io/ocaml-ooxml/doc"

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "base" {>= "v0.16.0"}
  "ocaml" {>= "5.1.0"}
  "ppx_jane"
  "sexplib"
  "stdint"
  "xml-light"

  "bisect_ppx" {build & >= "2.8.0"}
  "dune" {build}

  "ounit" {test}
]
name: "open_packaging"
version: "1.0"
