opam-version: "2.0"
authors: ["Brendan Long <self@brendanlong.com>"]
maintainer: "self@brendanlong.com"
homepage: "https://github.com/brendanlong/ocaml-ooxml"
dev-repo: "git+https://github.com/brendanlong/ocaml-ooxml.git"
bug-reports: "https://github.com/brendanlong/ocaml-ooxml/issues"
doc: "https://brendanlong.github.io/ocaml-ooxml/doc"

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "5.1.0"}
  "open_packaging"
  "ppx_jane"

  "bisect_ppx" {build & >= "2.8.0"}
  "dune" {build}

  "ounit" {test}
]
name: "spreadsheetml"
version: "1.0"
synopsis:
  "A library to parsing SpreadsheetML (used in Microsoft Excel files)"
